kubernetes/main/apps/database/crunchy-postgres-operator/cluster/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres-cluster
spec:
  endpointSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: postgres
  ingress:
    # allow Postgres pods to talk to each other
    - fromEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres

    # allow operator to connect
    - fromEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/control-plane: pgo

    # allow labelled pods to connect to Postgres only and ping with pg_health
    - fromEndpoints:
        - matchLabels:
            db.home.arpa/pg: "postgres"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "5432"
    - fromEndpoints:
        - matchLabels:
            db.home.arpa/pg: "postgres"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      icmps:
        - {}

  egress:
    # allow Postgres pods to talk to each other
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres

    # connect to operator
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/control-plane: pgo

    # Minio
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: nginx-internal
      toPorts:
        - ports:
            - port: "443"

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: apps-to-pg-postgres
spec:
  endpointSelector:
    matchLabels:
      db.home.arpa/pg: "postgres"
  egress:
    # Connections to master
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: master
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: "TCP"
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: master
            io.kubernetes.pod.namespace: database
      icmps: [{}]

    # Connections to pgbouncer
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: pgbouncer
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: "TCP"
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: pgbouncer
            io.kubernetes.pod.namespace: database
      icmps: [{}]
